Update default proguard version to 5.3.3
+ remove obsolete akka example
+ update other examples to scala 2.12